# krkr-sprite-synth-gui

./: main.py  pyproject.toml
app/: utils.py
app/controllers/: main_controller.py
app/views/: image_view.py  main_window.py
app/widgets/: __init__.py  file_selector.py  folder_selector.py
